--- a/form.html
+++ b/form.html
@@ -21,6 +21,11 @@
         </p>
 
         <p>
+            <label for="password">Confirm Password</label>
+            <input type="password" name="confirmpassword" id="password" required>
+        </p>
+
+        <p>
             <label for="phone">Phone</label>
             <input type="number" id="number">
         </p>
