--- a/form.html
+++ b/form.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <form action="index.html" method="POST" enctype="multipart/form-data">
         <p>
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" required>
+            <input type="text" name="name" id="name" required placeholder="Enter your name...">
         </p>
 
         <p>
@@ -69,7 +70,7 @@
         <input type="file">
        </p> 
 
-        <input type="submit" value="Submit Form">
+        <input type="submit" class="button" value="Submit Form">
         
 
     </form>
